# Price-trend-cnn

./: .gitignore  LSTM.py  MLP.py  Ohlc_chart.py  README.md  experiments.md  main.py  pyproject.toml  requirements.txt  results.ipynb  sandbox.txt
configs/: run_cnn_baseline_config.json  run_no_ma_config.json  run_no_volume_config.json  run_pipeline_config.json
data/: Fetch_data.py
evaluation/: Metrics.py
imaging/: Ohlc_chart.py
src/reimagining_trends/: pipeline.py
src/reimagining_trends/backtest/: backtester.py  metrics.py  portfolio.py  simulator.py
src/reimagining_trends/data/: data_manager.py  fetch_data.py
src/reimagining_trends/evaluation/: evaluator.py  metrics.py
src/reimagining_trends/imaging/: ohlc_chart.py
src/reimagining_trends/models/: cnn.py  lstm.py  mlp.py
src/reimagining_trends/training/: train.py
src/reimagining_trends/utils/: config.py  utils.py
tests/: conftest.py  test_data.py  test_imaging.py  test_metrics.py  test_models.py  test_training.py
training/: Train.py
