[project]
name = "reimagining-price-trends"
version = "0.1.0"
description = "Price trend prediction: MLP vs LSTM vs CNN (Jiang, Kelly & Xiu 2023)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "yfinance>=0.2.36",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "pillow>=10.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tqdm>=4.66",
    "pytest>=9.0.3",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "ipywidgets>=8.0",
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reimagining_trends"]
